# socrob-ros-pkg

./: README.md
quads/: unusedstack.xml
quads/mapping_imu_laser/: CMakeLists.txt  README  mainpage.dox  unusedmanifest.xml
quads/mapping_imu_laser/cfg/: faseado.vcg  map.vcg
quads/mapping_imu_laser/launch/: faseado.launch
quads/mapping_imu_laser/src/: complete_pose.cpp  laser_inverter.cpp
quads/quad_ros/: att.launch  att.vcg  fly_remote.launch
quads/quad_ros/quad_common/: stack.xml
quads/quad_ros/quad_control/: stack.xml
quads/quad_ros/quad_drivers/: stack.xml
quads/quad_ros/quad_launch/: mainpage.dox  manifest.xml
quads/rgbd_slam_isam/: README.md
quads/rgbd_slam_isam/ccny_g2o/: Makefile
quads/rgbd_slam_isam/ccny_rgbd/: CMakeLists.txt  manifest_.xml
quads/rgbd_slam_isam/lib_rgbdtools/: Makefile
quads/rgbd_slam_isam/lib_rgbdtools/rgbdtools_git/: CMakeLists.txt
quads/rgbd_slam_isam/lib_rgbdtools/rgbdtools_git/apps/: keyframe_associations.cpp
quads/rgbd_slam_isam/lib_rgbdtools/rgbdtools_git/include/rgbdtools/: map_util.h  matcher.h  rgbdtools.h
quads/rgbd_slam_isam/lib_rgbdtools/rgbdtools_git/include/rgbdtools/graph/: keyframe_graph_solver_isam.h
quads/rgbd_slam_isam/lib_rgbdtools/rgbdtools_git/include/rgbdtools/registration/: motion_estimation_icp_prob_model.h
quads/rgbd_slam_isam/lib_rgbdtools/rgbdtools_git/src/: map_util.cpp  rgbd_frame.cpp  rgbd_keyframe.cpp  rgbd_util.cpp
quads/rgbd_slam_isam/lib_rgbdtools/rgbdtools_git/src/graph/: keyframe_graph_detector.cpp  keyframe_graph_solver.cpp  keyframe_graph_solver_g2o.cpp  keyframe_graph_solver_isam.cpp
quads/rgbd_slam_isam/lib_rgbdtools/rgbdtools_git/src/registration/: motion_estimation_icp_prob_model.cpp  motion_estimation_pairwise_ransac.cpp
raposa/: stack.xml
raposa/raposang_ros/: clean_all  install_dependencies  stack.xml
raposa/raposang_ros/kinect_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
raposa/raposang_ros/kinect_driver/config/calibrationdata/: ost.ini
raposa/raposang_ros/kinect_driver/include/: kinect_driver.h
raposa/raposang_ros/kinect_driver/launch/: kinect_driver.launch
raposa/raposang_ros/kinect_driver/src/: kinect_aux.cpp  pointcloud_decompressor_node.cpp
raposa/raposang_ros/raposang_bumblebee2/: mainpage.dox
raposa/raposang_ros/raposang_gui/: imu_local  imu_telemetry  telemetry.py
raposa/raposang_ros/raposang_icp/: CMakeLists.txt  README.txt
raposa/raposang_ros/raposang_icp/KinectCalibration/My  Kinect (cam2)/: calibration_rgb.yaml  kinect_calibration.yml
raposa/raposang_ros/raposang_icp/include/: ICPBlock.h
raposa/raposang_ros/raposang_icp/include/imp/: ICPBlock.hpp
raposa/raposang_ros/raposang_icp/launch/: worldmap.launch  worldmap2.launch
raposa/raposang_ros/raposang_icp/src/: ICPInitializationBlock.cpp  ICP_plane2plane.cpp  RotQuaUtilities.cpp  surfels_rgbd.cpp
raposa/raposang_ros/raposang_icp/src/demos/: demo_icp_keyframes.cpp
raposa/raposang_ros/raposang_icp/src/ransac/: ParameterEstimator.h  RANSAC.h
raposa/raposang_ros/raposang_icp/src/ransac/new/: RSTEstimator.h
raposa/raposang_ros/raposang_icp/src/test_files/: test_ICPBlock.cpp  test_ICP_pl2pl.hpp
raposa/raposang_ros/raposang_icp/src/test_files/tests/: test_ICPInitializationBlock.cpp
raposang_ros/: README  raposang_clean_all
raposang_ros/raposang_common/: unusedstack.xml
raposang_ros/raposang_control/: stack.xml
raposang_ros/raposang_hmd/: unusedstack.xml
raposang_ros/raposang_hmd/raposang_emagin_z800/: CMakeLists.txt  mainpage.dox  unusedmanifest.xml
raposang_ros/raposang_hmd/raposang_emagin_z800/libz800/: Calc.cpp  Calc.h  Device.cpp  Device.h  Doxyfile  Makefile  Makefile.Debug  Makefile.Release  Property.cpp  Property.h  QuatKalmanFilter.cpp  QuatKalmanFilter.h  Timer.cpp  Timer.h  libz800.cpp  libz800.h  libz800.pro  main.c
raposang_ros/raposang_hmd/raposang_emagin_z800/libz800math/: Matrix.h  Matrix_implementation.cpp  Matrixd.cpp  Matrixd.h  Matrixf.cpp  Matrixf.h  Quat.cpp  Quat.h  Utils.cpp  Utils.h  Vec3.h  Vec3d.h  Vec3f.h  Vec4.h  Vec4d.h  Vec4f.h
raposang_ros/raposang_hmd/raposang_emagin_z800/src/: imu_node.cpp
raposang_ros/raposang_image/: unusedstack.xml
raposang_ros/raposang_interface/: unusedstack.xml
raposang_ros/raposang_kinect/: stack.xml
raposang_ros/raposang_navigation/: unusedstack.xml
raposang_ros/raposang_sandbox/: unusedstack.xml
soccer-msl/: stack.xml
soccer-msl/socrob_multicast/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  rosdoc.yaml
soccer-msl/socrob_multicast/include/socrob/: multicast.h
soccer-msl/socrob_multicast/include/socrob_multicast/: compressor.h  definitions.h  manager.h  serialization.h
soccer-msl/socrob_multicast/launch/: test_long_delay_heavy_short.launch  test_long_delay_low_short.launch  test_long_delay_no_short.launch  test_short_multiple_delay.launch  test_short_multiple_delay_heavy.launch  test_short_multiple_in_long_delay.launch  test_short_single_delay.launch  test_short_single_delay_heavy.launch  test_short_single_in_long_delay.launch
soccer-msl/socrob_multicast/msg/: Answer.msg  Long.msg  MultipleShort.msg  Short.msg
soccer-msl/socrob_multicast/src/: Manager.cpp
soccer-msl/socrob_multicast/src/common/: BandwidthManager.h  DynamicTable.h  Helpers.h  MulticastChannel.cpp  MulticastChannel.h  Protocol.h  ShortActive.h  StateTable.h
soccer-msl/socrob_multicast/src/long/: DurationEstimator.h  LongRoundManager.cpp  LongRoundManager.h  TimeControl.h
soccer-msl/socrob_multicast/src/short/: ShortData.h  ShortDataMine.h  ShortDataOthers.h  ShortMine.h  ShortOthers.h  ShortRoundManager.cpp  ShortRoundManager.h
soccer-msl/socrob_multicast/tests/: ShortHeavyLoader.h  TestLongDelay.h  TestShortMultipleDelay.h  TestShortMultipleInLongDelay.h  TestShortSingleDelay.h  TestShortSingleInLongDelay.h  long_delay_heavy_short.cpp  long_delay_low_short.cpp  long_delay_no_short.cpp  short_multiple_delay.cpp  short_multiple_delay_heavy.cpp  short_multiple_in_long_delay.cpp  short_single_delay.cpp  short_single_delay_heavy.cpp  short_single_in_long_delay.cpp
(+413 files in other folders)
